--- a/src/router/forgine.css
+++ b/src/router/forgine.css
@@ -1,16 +1,33 @@
-.sub{
-    width: 32em;
-    height: 1000px;
-    background: lightpink;
-    float: left;
+.sub {
+    width: 250px;
+    position: fixed;
+    right: 15px;
+    top: 100px;
+    z-index: 99;
+    background: #fff;
+    padding: 20px;
 }
-
-.Chatbot{
-    width: 550px;
-    height: 400px;
-    max-height: 400px;
-    overflow-y: auto;
-    background: wheat;
+.widget-header { border-bottom: 1px solid #eee; }
+.widget-section {
+    font-size: 0.8em;
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+table { width: 100%; }
 
-
+.Chatbot {
+    width: 300px;
+    height: 500px;
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    z-index: 999;
+    background: rgba(255, 255, 255);
+    /*padding: 20px;*/
+}
+.Map {
+    width: 100%;
+    height: calc(50vh - 35px);
+}
