--- a/src/css/forgine.css
+++ b/src/css/forgine.css
@@ -1,54 +1,33 @@
-.K_header{
-    height: 30rem;
-    overflow: hidden;
-}
-
-.F_big_content{
-    width: 600vw;
-    overflow: hidden;
-}
-
-.F_city-list{
-    width: 100vw;
-    float: left;
-    transition: transform 0.5s;
-}
-
-.city-item {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    margin: 0 auto;
-
-}
-.chat_box {
-    border-radius: 30px;
-    padding: 20px;
+.sub {
+    width: 250px;
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 150px; /* 원하는 너비로 조정 */
-    height:100px; /* 원하는 높이로 조정 */
-}
-
-.chat_box p {
-    margin: 0 auto;
-    font-size: 30px; /* 내부 텍스트의 크기를 조절 */
-}
-.content{
-    display: inline-block;
-    border: 1px solid lightgray;
-    width: 400px;
+    right: 50px;
+    top: 120px;
+    z-index: 99;
+    background: #fff;
     padding: 20px;
-    background: white;
-    margin: 20px 10px;
 }
-.Chatbot{
-    width: 550px;
-    height: 300px;
-    max-height: 400px;
-    overflow-y: auto;
-    background: lightpink;
+.widget-header { border-bottom: 1px solid #eee; }
+.widget-section {
+    font-size: 0.8em;
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+table { width: 100%; }
 
-
+.Chatbot {
+    width: 300px;
+    height: 500px;
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    z-index: 999;
+    background: rgba(255, 255, 255);
+    /*padding: 20px;*/
+}
+.Map {
+    width: 100%;
+    height: calc(50vh - 35px);
+}
