--- a/src/css/ChatBot.css
+++ b/src/css/ChatBot.css
@@ -1,25 +1,32 @@
-.Chatbot {
+.Chatbot-con {
+    width: 300px;
+    height: 500px;
     border-radius: 10px 10px 0 0;
     overflow: hidden;
-    position: relative;
+    position: fixed;
+    left: 2%;
+    bottom: 2%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     white-space: pre-wrap;
+    background: #fff;
+    line-height: 1em;
+    box-sizing: border-box;
 }
 .chatbot-header {
     height: 60px;
     color: #fff;
-    /*display: block;*/
-    align-items: center;
     padding: 10px;
-    background: #16a085;
+    background: linear-gradient(240deg, #3496fe, #178844 60%);
 }
 .bot-info {
     font-size: 0.9em;
     float: left;
     padding-left: 10px;
     margin: 0;
+    text-align: left;
 }
 .bot-info h5, .bot-info p { margin: 0; }
+
 .chat-icon {
     text-align: center;
     line-height: 35px;
@@ -27,9 +34,6 @@
     height: 40px;
     background: #fff;
     border-radius: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     float: left;
 }
 .chat-icon svg {
@@ -44,19 +48,25 @@
     background: none;
     color: #fff;
 }
+.Chat-con {
+    width: 95%;
+    height: 70%;
+    margin: 0 auto;
+    overflow-y: auto;
+}
 /* send message area */
 .sendMessage {
     width: 100%;
-    height: 80px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    border-top: 1px solid #eee;
-    display: flex;
+    height: 100%;
+    border-top: 1px solid #ccc;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .sendMessage input {
     width: 100%;
+    height: 100%;
     border: 0;
     border-radius: 10px;
     font-size: 0.8em;
@@ -66,13 +76,16 @@
     background: none;
     border: 0;
     color: darkgrey;
+    display: flex;
+
 }
 /* chat message */
 .welcome-message {
-    width: 65%;
+    width: 60%;
+    text-align: left;
     font-size: 0.85em;
-    border: 1px solid #eee;
+    border: 1px solid #ccc;
+    border-radius: 10px;
     padding: 10px;
     margin: 10px;
-    border-radius: 20px;
 }
