--- a/src/css/KakaoMap.css
+++ b/src/css/KakaoMap.css
@@ -1,7 +1,7 @@
 .map-btn {
-    position: absolute;
-    bottom: 47%;
-    right: 37px;
+    /*position: absolute;*/
+    /*bottom: 47%;*/
+    /*right: 37px;*/
     z-index: 99;
     text-align: center;
 }
