--- a/src/css/ChatBot.css
+++ b/src/css/ChatBot.css
@@ -1,17 +1,23 @@
-.Chatbot-con {
-    width: 300px;
+.ChatbotIn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 400px;
     height: 500px;
+    max-height: 500px;
     border-radius: 10px 10px 0 0;
-    overflow: hidden;
     position: fixed;
-    left: 10%;
-    bottom: 5%;
+    right: 2%;
+    bottom: 2%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    white-space: pre-wrap;
     background: #fff;
-    line-height: 1em;
 }
 .chatbot-header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    line-height: 1.2;
     height: 60px;
     color: #fff;
     padding: 10px;
@@ -47,46 +53,70 @@
     background: none;
     color: #fff;
 }
-.Chat-con {
-    width: 95%;
-    height: 75%;
-    margin: 0 auto;
+.message-display-container {
+    flex-grow: 1;
     overflow-y: auto;
+    padding: 10px;
 }
+
 /* send message area */
 .sendMessage {
-    width: 100%;
-    height: calc(25% - 60px);
-    border-top: 1px solid #ccc;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex; /* flexbox 레이아웃을 사용하여 내부 요소를 좌우로 배치 */
+    align-items: center; /* 세로 중앙 정렬 */
+    padding: 10px; /* 입력 필드와 버튼 주위의 패딩 */
+    box-shadow: 0px -4px 5px -2px rgba(0,0,0,0.2); /* 상단에 그림자 효과 */
 }
+
 .sendMessage input {
-    width: 100%;
-    height: 100%;
-    border: 0;
-    border-radius: 10px;
-    font-size: 0.8em;
-    padding: 5px;
-    background: #eee;
+    flex-grow: 1; /* 나머지 공간을 모두 차지하도록 설정 */
+    margin-right: 10px; /* 버튼과의 간격 */
+    padding: 10px; /* 텍스트 입력 영역 내부의 패딩 */
+    border: 1px solid #ccc; /* 경계 스타일 */
+    border-radius: 20px; /* 경계 둥글기 */
+}
+
+.sendMessage button {
+    min-width: 50px; /* 버튼 최소 너비 */
+    padding: 10px; /* 버튼 내부 패딩 */
+    border: none; /* 경계 없애기 */
+    background-color: #5b9bd5; /* 버튼 배경색 */
+    color: white; /* 버튼 텍스트 색상 */
+    border-radius: 20px; /* 버튼 경계 둥글기 */
+    cursor: pointer; /* 마우스 오버시 커서 변경 */
 }
 .sendMessage input:focus {
     outline: none;
     background: #fff;
 }
-.sendMessage button {
-    background: none;
-    border: 0;
-    color: darkgrey;
-    display: flex;
-    padding-left: 10px;
 
-}
 /* chat message */
 .welcome-message {
-    width: 60%;
+    width: 80%;
+    text-align: left;
+    font-size: 0.85em;
+    border: 1px solid #ddd;
+    border-radius: 20px 20px 20px 0;
+    padding: 10px;
+    margin: 80px 10px 10px 10px;
+    line-height: 1.4;
+}
+
+/* send message style */
+.chat-message-user {
+    width: 80%;
+    text-align: right;
+    font-size: 0.85em;
+    border: 1px solid #ddd;
+    border-radius: 20px 20px 0 20px;
+    padding: 10px;
+    margin: 10px 10px 10px auto;
+}
+
+.chat-message-bot {
+    width: 80%;
     text-align: left;
     font-size: 0.85em;
     border: 1px solid #ddd;
@@ -94,24 +124,13 @@
     padding: 10px;
     margin: 10px;
 }
-
-/* send message style */
-.user, .chatbot {
-    width: 60%;
-    padding: 5px;
-    margin: 10px;
-    font-size: 0.8em;
+.chat-message-user strong, .chat-message-user div,
+.chat-message-bot strong, .chat-message-bot div {
+    display: inline-block;
+    line-height: 1.4; /* 기본적인 줄 간격으로 조정합니다. */
+    /*margin-right: 5px; !* 필요에 따라 조정할 수 있는 여백입니다. *!*/
 }
-.user {
-    float: right;
-    /*text-align: right;*/
-    background: #eee;
-    border-radius: 20px 20px 0 20px;
-}
-.chatbot {
-    float: left;
-    /*text-align: left;*/
-    padding-left: 10px;
-    border: 1px solid #ddd;
-    border-radius: 20px 20px 20px 0;
+.chat-message-user, .chat-message-bot {
+    /* 기존 스타일 유지하면서 추가 */
+    line-height: 1.2; /* 기본값은 보통 1.4 ~ 1.6, 여기서는 줄 간격을 줄입니다 */
 }
