로그인,로그아웃 구현완료

--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,39 @@
 body {
   font-family: "Noto Sans KR", sans-serif;
   font-style: normal;
-  /*overflow: hidden;*/
 }
 
-/* 기본 스타일 */
 .App {
   display: flex;
   flex-direction: row; /* 넓은 화면에서는 사이드바와 지도가 나란히 배치됨 */
-  height: 100vh;
+  height: 90vh;
 }
+
 .Info{
-  margin-top: 70px;
+  margin-top: 140px;
   padding: 20px;
 }
+.header-Top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  z-index: 999;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  background: #fff; /* 예시 배경색 */
+}
+
+.gradient-text {
+  background-image: linear-gradient(45deg, #3496fe, #178844 50%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  margin : 0 auto;
+  }
 
 .top-nav {
   display: flex;
@@ -30,18 +50,17 @@ body {
   color: white;
   padding: 10px 20px;
   position: fixed;
-  top: 0;
+  top: 70px; /* 헤더 아래에 위치하도록 조정 */
   width: 100%;
   height: 70px;
-  z-index: 999;
+  z-index: 998; /* 헤더 위에 오도록 z-index 값 조정 */
   box-sizing: border-box; /* 패딩을 포함한 너비가 100%가 되도록 설정 */
 }
 
-.nav-brand a {
+.top-nav a, .sidebar a, .nav-info a {
   color: white;
   text-decoration: none;
 }
-
 .nav-links a {
   color: white;
   text-decoration: none;
@@ -52,68 +71,25 @@ body {
   margin-right: 20px; /* 정보 사이의 간격 */
 }
 
-.nav-info a {
-  color: white;
-  text-decoration: none;
-}
 .sidebar {
   flex-basis: 400px; /* 기본 사이드바 너비 설정 */
   height: 100vh; /* 화면의 전체 높이 */
   background: #16a085;
-  margin-top: 70px;
+  margin-top: 140px;
   /* 기타 스타일 */
 }
 
 .main-con {
   flex-grow: 1;
-  margin-top: 70px;/* 남은 공간을 모두 차지 */
+  margin-top: 140px;/* 남은 공간을 모두 차지 */
   /* 기타 스타일 */
 }
 
-/* 모바일 화면에서 네비게이션 스타일 */
-@media (max-width: 768px) {
-  .App {
-    flex-direction: column-reverse; /* 사이드바를 지도 아래로 */
-  }
-
-  .main-con {
-    width: 100%; /* 지도가 화면 너비를 100% 차지하도록 */
-    height: 50vh; /* 원하는 높이로 설정, 예를 들어 화면 높이의 절반 */
-    /* 다른 스타일 */
-  }
-  .sidebar {
-    margin-top: 0;
-    width: 100%; /* 사이드바가 화면 너비를 100% 차지하도록 */
-    height: 50vh; /* 나머지 높이를 차지하도록, 예를 들어 화면 높이의 절반 */
-    /* 다른 스타일 */
-  }
-  .top-nav {
-    flex-direction: column;
-    padding: 10px;
-  }
-
-  .nav-links {
-    margin-top: 10px;
-  }
-
-  .nav-info {
-    margin-top: 10px;
-  }
-}
 
 .Map {
-  width: calc(100vw - 400px); /* 사이드바의 너비를 고려한 지도의 너비 */
+  width: calc(100vw - 419px); /* 사이드바의 너비를 고려한 지도의 너비 */
   height: 100vh; /* 전체 높이 */
   float: left; /* 사이드바 옆에 표시 */
-}
-
-/* 태블릿과 모바일 화면에서의 스타일 */
-@media (max-width: 768px) {
-  .Map {
-    width: 100vw; /* 화면의 전체 너비 */
-    height: 50vh; /* 화면 높이의 절반 */
-    float: none; /* 사이드바 아래에 표시 */
-  }
 }
 
 .Navbar{
@@ -146,7 +122,6 @@ body {
   font-size: 1.8em;
 }
 
-
 .text_box{
   margin: 0 50px;
 }
@@ -155,25 +130,11 @@ body {
   margin: 0 auto;
   text-align: center;
 }
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .nav_button{
-  width: 100px;
+  width: 120px;
   background: white;
   margin-top: 30px;
-  padding: 10px;
 }
 
 .small_nav{
@@ -184,7 +145,7 @@ body {
 }
 .small_nav .nav_button{
   background: white;
-  margin: 20px 10px;
+  margin: 20px 5px;
   padding: 10px;
   border-radius: 10px;
   color : #16a085;
@@ -193,7 +154,7 @@ body {
 
 .small_nav .nav_button:hover{
   background: whitesmoke;
-  margin: 20px 10px;
+  margin: 20px 5px;
   padding: 10px;
   border-radius: 10px;
   color : #16a085;
@@ -209,15 +170,54 @@ body {
   background: #fff;
   padding: 20px;
 }
-.widget-header { border-bottom: 1px solid #eee; }
-.widget-section {
-  font-size: 0.8em;
-  padding-top: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.login-btn{
+  border: 2px solid #A2E1D4;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #A2E1D4;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  position: relative;
 }
-table { width: 100%; }
+.myPage, .nav-link{
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #A2E1D4;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  position: relative;
+}
+/* 드롭다운 버튼 */
+.dropdown-btn {
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  background-color: #A2E1D4;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  position: relative;
+  margin-right: 10px;
+}
+
+/* 드롭다운 내용 */
+.dropdown-content {
+  display: none; /* 기본적으로 숨김 처리 */
+  position: absolute;
+  right: 0; /* 오른쪽 정렬 */
+  width: 100px;
+  margin: 20px 20px 20px 0;
+  z-index: 1;
+}
+
+/* 드롭다운 버튼 호버 시 드롭다운 내용 보여주기 */
+.login-btn:hover .dropdown-content {
+  display: block; /* 마우스 오버시 표시 */
+}
 
 .Chatbot {
   width: 80px;
@@ -230,7 +230,6 @@ table { width: 100%; }
   right: 3%;
   bottom: 2%;
   z-index: 999;
-  /*transition: transform 0.3s;*/
 }
 
 .chat-open-btn {
@@ -267,11 +266,9 @@ table { width: 100%; }
   overflow: hidden;
 }
 
-
 .senter-marker button:hover{
   background-color: #A2E1D4; /* 호버 상태의 배경색 변경 */
 }
-
 
 .Info {
   background: #f4f4f4; /* 연한 회색 배경 */
@@ -297,7 +294,40 @@ table { width: 100%; }
   line-height: 1.6; /* 줄간격 */
 }
 
-@media screen and (max-width: 768px) {
+/* 모바일 화면에서 네비게이션 스타일 */
+@media (max-width: 768px) {
+  .App {
+    flex-direction: column-reverse; /* 사이드바를 지도 아래로 */
+  }
+
+  .main-con {
+    width: 100%; /* 지도가 화면 너비를 100% 차지하도록 */
+    height: 50vh; /* 원하는 높이로 설정, 예를 들어 화면 높이의 절반 */
+    /* 다른 스타일 */
+  }
+  .sidebar {
+    margin-top: 0;
+    width: 100%; /* 사이드바가 화면 너비를 100% 차지하도록 */
+    height: 50vh; /* 나머지 높이를 차지하도록, 예를 들어 화면 높이의 절반 */
+    /* 다른 스타일 */
+  }
+  .top-nav {
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  .nav-links {
+    margin-top: 10px;
+  }
+
+  .nav-info {
+    margin-top: 10px;
+  }
+  .Map {
+    width: 100vw; /* 화면의 전체 너비 */
+    height: 50vh; /* 화면 높이의 절반 */
+    float: none; /* 사이드바 아래에 표시 */
+  }
   .Info {
     padding: 20px; /* 모바일에서의 패딩 */
   }
